Fix flex align and style hero section
Align-content changed to align-items.
Flex added to hero with text on left and
img on the right. Give blue bg and white
text to buttons.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -15,8 +17,9 @@ body {
 .hero,
 .information,
 .quote,
+.cta,
 .footer {
-  padding: 0 290px;
+  padding: 0 280px;
 }
 
 .header,
@@ -25,16 +28,27 @@ body {
   background-color: #1f2937;
 }
 
+.logo a,
+.hero-header {
+  color: #f9faf8;
+}
+
+.hero p,
+.header-links a,
+.button {
+  font-size: 18px;
+  color: #e5e7eb;
+}
+
 .header {
   padding-top: 20px;
-  padding-bottom: 80px;
+  padding-bottom: 100px;
   display: flex;
   justify-content: space-between;
-  align-content: center;
+  align-items: center;
 }
 
 .logo a {
-  color: #f9faf8;
   font-size: 24px;
   font-weight: 900;
   text-decoration: none;
@@ -47,11 +61,27 @@ body {
 }
 
 .header-links a {
-  font-size: 18px;
-  color: #e5e7eb;
   text-decoration: none;
 }
 
 .header-links a:hover {
   text-decoration: underline;
+}
+
+.hero {
+  display: flex;
+  align-items: center;
+  gap: 60px;
+  padding-bottom: 140px;
+}
+
+.hero-header {
+  font-size: 48px;
+}
+
+.button {
+  background-color: #3882f6;
+  padding: 6px 28px;
+  border-radius: 5px;
+  margin-top: 10px;
 }
